<resources>
    <!--
    <string name="EXAMPLE_RUT">26002138-9</string>
    <string name="EXAMPLE_URL">https://portal.sidiv.registrocivil.cl/docstatus?RUN=26002138-9&amp;type=CEDULA_EXT&amp;serial=603641129&amp;mrz=603641129290123182809300</string>
    -->
    <string name="HINT_RUT">12345678-9</string>
    <string name="HINT_URL">Toque aquí para utilizar el lector</string>
    <string name="APP_NAME">Clickgroup</string>
    <string name="SCAN_TO_CODE">Escanee el código</string>
    <string name="SCAN">Escaner</string>
    <string name="REGISTRANTS">Participantes</string>
    <string name="SETTING">Configuración</string>
    <string name="SEARCH_FOR_ID">Buscar por RUT</string>
    <string name="SEARCH">Buscar</string>
    <string name="RUT_INVALID">El RUT ingresado no es válido</string>
    <string name="STRING_INVALID">El código leído no es compatible</string>
    <string name="REFRESH">Actualizar</string>
    <string name="SYNC_FAIL">Ocurrió un error durante la sincronización</string>
    <string name="SERVICE_FAIL">No es posible sincronizar los datos, revise su conexion a internet o intente nuevamente más tarde</string>
    <string name="LOADING">Cargando...</string>
    <string name="SERVICE_RESPONSE_FAIL">El servicio está fallando</string>
    <string name="SYNC_SUCCESS">La sincronización fue exitosa</string>
    <string name="CLEAR_DATABASE">Limpiar base de datos</string>
    <string name="OK">OK</string>
    <string name="CLEAR_DATABASE_DESCRIPTION">Se eliminarán todos los registros locales</string>
    <string name="CONFIRMATION_TITLE">Confirmación</string>
    <string name="CONFIRMATION_MESSAGE">¿Estás seguro de que deseas borrar la base de datos local?</string>
    <string name="YES">Sí</string>
    <string name="NO">No</string>
    <string name="CLEAR_DATABASE_SUCCESS">Se limpió correctamente la base de datos</string>
    <string name="ENTER">Ingresar</string>
    <string name="ENTER_CODE">Ingrese el código del Evento</string>
    <string name="EVENT_CODE">Código del Evento</string>
    <string name="CHANGE_EVENT_CODE">Cambiar código del Evento</string>
    <string name="CODE_EVENT_CHANGE_SUCCESS">El código del Evento fue actualizado</string>
    <string name="EVENT_CODE_INVALID">El códgio de Evento no es válido</string>
    <string name="NEEDED_INTERNET">Es necesario estar conectado a internet para ingresar por primera vez</string>
    <string name="CLEAR_CODE_SUCCESS">El código fue eliminado correctamente</string>∏
    <string name="CONFIRMATION_MESSAGE_CLEAR_CODE">¿Está seguro que desea eliminar el código y la base de datos local?</string>
    <string name="CLEAR_EVENT_CODE">Eliminar el código de Evento</string>
    <string name="SEARCH_HINT">Buscar...</string>
    <string name="CHECKIN_SUCCESS">Check-in exitoso</string>
    <string name="CHECKIN_EXIST">Este usuario ya ha hecho check-in</string>
    <string name="ACCEPT">Aceptar</string>
    <string name="PERSON_NOT_FOUND">No se encontró ninguna persona con ese RUT.</string>
    <string name="PERSON_NOT_FOUND_BY_ID">No se encontró ninguna persona con ese ID.</string>
    <string name="BACK">Volver</string>
    <string name="FULLNAME">Nombre completo</string>
    <string name="EMAIL">Email</string>
    <string name="DOCUMENT">RUT</string>
    <string name="EXTERNAL_ID">ID usuario</string>
    <string name="CHECK_IN">Check In</string>
    <string name="SCAN_TO_CODE_QR">Escanee un código QR</string>
    <string name="SEARCH_FOR_REGISTRANT_ID">Buscar por ID</string>
    <string name="USE_BARCODE">Utilizar lector PDF 417</string>
    <string name="HINT_ID">9999</string>
    <string name="SCAN_CANCELED">Escaneo cancelado</string>
    <string name="QR_INVALID">El código escaneado no es válido</string>
    <string name="EXAMPLE_ID"></string>
    <string name="EXAMPLE_RUT"></string>
    <string name="EXAMPLE_URL"></string>
    <string name="EVENT_NAME">Nombre del Evento</string>
    <string name="EVENT_ID">ID evento</string>
    <string name="CHECKIN_BY_SEARCH">CheckIn desde el buscador</string>
    <string name="ADD_BUTTON">Crear</string>
    <string name="FIRST_NAME">Nombre</string>
    <string name="LAST_NAME">Apellido</string>
    <string name="SAVE">Guardar</string>
    <string name="COMPANY">Empresa</string>
    <string name="ERROR_FIRST_NAME_EMPTY">El nombre no puede estar vacío</string>
    <string name="ERROR_FIRST_NAME_SHORT">El nombre debe tener al menos 2 caracteres</string>
    <string name="ERROR_LAST_NAME_EMPTY">El apellido no puede estar vacío</string>
    <string name="ERROR_LAST_NAME_SHORT">El apellido debe tener al menos 2 caracteres</string>
    <string name="ERROR_EMAIL_INVALID">Introduce un email válido</string>
    <string name="ERROR_DOCUMENT_EMPTY">El RUT no puede estar vacío</string>
    <string name="REQUEST_MORE_INFO">Solicitar más información</string>
    <string name="ENTER_RESPONSE">Respuesta...</string>
    <string name="ERROR_REGISTRANT_CREATE">Ha ocurrido un error al crear el registrante</string>
    <string name="REGISTRANT_CREATE_OK">Persona creada correctamente, vuelva sincronizar con el servidor</string>
    <string name="INTEGRATION_TYPE">Tipo de integración</string>
    <string name="integration_type_checkin">Check In</string>
    <string name="integration_type_register">Registro</string>
    <string name="NOT_APPLICABLE">No aplica</string>
    <string name="PDF">Imprimir ticket</string>
    <string name="POSITION">Cargo</string>
</resources>