<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.FormPerson">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:scaleType="fitCenter"
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/BACK"
        app:tint="@color/pink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/TV_firstName_label"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/FIRST_NAME"
        android:textSize="16sp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/TV_firstName_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:id="@+id/ET_firstName_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white_600"
        android:textSize="16sp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/ET_firstName_value"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/TV_lastName_label"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/LAST_NAME"
        android:textSize="16sp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/TV_lastName_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/ET_lastName_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:textColor="@color/white_600"
        android:textSize="16sp" />
    <TextView
        app:layout_constraintTop_toBottomOf="@id/ET_lastName_value"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:id="@+id/TV_email_label"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/EMAIL"
        android:textSize="16sp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/TV_email_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/ET_email_value"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:textColor="@color/white_600"
        android:textSize="16sp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/ET_email_value"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:id="@+id/TV_document_label"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/DOCUMENT"
        android:textSize="16sp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/TV_document_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/ET_document_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:textColor="@color/white_600"
        android:textSize="16sp" />
    <TextView
        app:layout_constraintTop_toBottomOf="@id/ET_document_value"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:id="@+id/TV_phone_label"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/PHONE"
        android:textSize="16sp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/TV_phone_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/ET_phone_value"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:textColor="@color/white_600"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@id/ET_phone_value"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/BT_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:padding="0dp"
        android:text="@string/SAVE" />

</androidx.constraintlayout.widget.ConstraintLayout>